# Sales-Forecasting

./: .dockerignore  .gitignore  Case - Study - Forecasting.txt  Dockerfile  Dockerfile.streamlit  EXECUTION_PLAN.md  EXPLANATION.md  Makefile  README.md  alembic.ini  docker-compose.yml  environment.yml  forecasting.db  guide.md  pyproject.toml  run.ps1
.streamlit/: config.toml
config/: training_config.yaml
models/: lightgbm_20260429_162528  lightgbm_20260429_180659  lightgbm_20260429_205945  lightgbm_california_20260429_233555  lightgbm_florida_20260430_001456  lightgbm_louisiana_20260430_014407  lightgbm_maine_20260430_015513  lightgbm_michigan_20260430_023200  prophet_20260429_162528  prophet_20260429_180659  prophet_20260429_184608  prophet_20260429_205945  prophet_washington_20260430_032613  registry.json  sarima_20260429_184608  sarima_20260429_203402  xgboost_20260429_162528  xgboost_20260429_180659  xgboost_20260429_184608  xgboost_alabama_20260429_225557  xgboost_arizona_20260429_231221  xgboost_arkansas_20260429_232354  xgboost_colorado_20260429_234439  xgboost_connecticut_20260429_235722  xgboost_georgia_20260430_002646  xgboost_illinois_20260430_004106  xgboost_indiana_20260430_005636  xgboost_iowa_20260430_011003  xgboost_kansas_20260430_011901  xgboost_kentucky_20260430_013215  xgboost_maryland_20260430_020624  xgboost_massachusetts_20260430_021906  xgboost_minnesota_20260430_024205  xgboost_mississippi_20260430_025131  xgboost_missouri_20260430_035610  xgboost_nebraska_20260430_035610  xgboost_nevada_20260430_035613  xgboost_new_hampshire_20260430_035731  (+18 more)
(+55 files in other folders)
