[tool.poetry]
name = "forecasting-system"
version = "1.0.0"
description = "Production-ready time series forecasting system with REST API"
authors = ["Bavirisetty Sairam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
redis = "^5.1.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.0"
pmdarima = "^2.0.4"
prophet = "^1.1.5"
xgboost = "^2.1.0"
lightgbm = "^4.5.0"
torch = "^2.4.0"
pandera = "^0.20.0"
optuna = "^4.0.0"
joblib = "^1.4.0"
loguru = "^0.7.2"
pyyaml = "^6.0.2"
httpx = "^0.27.0"
streamlit = "^1.38.0"
plotly = "^5.24.0"
holidays = "^0.55"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.0"
black = "^24.8.0"
pre-commit = "^3.8.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
